--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "async": "^2.6.0",
     "express": "^4.16.2",
     "indico.io": "^0.10.5",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4",
     "snoowrap": "^1.15.2",
     "twitter": "^1.7.1"
   },
