--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "async": "^2.6.0",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "indico.io": "^0.10.5",
     "passport": "^0.4.0",
