--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
     "indico.io": "^0.10.5",
     "passport": "^0.4.0",
